<?xml version="1.0"?>
<package format="2">
  <name>nautilus_urdf</name>
  <version>0.0.0</version>
  <description>The nautilus_urdf package</description>

  <maintainer email="k2contact@seaward.science">nautilus</maintainer>



  <license>Apache2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
